--- a/style.css
+++ b/style.css
@@ -35,4 +35,104 @@
 }
 .aaa::before {
   content: "";
+  display: block;
+  width: 270px;
+  height: 120px;
+  background-image: url("./Group1.png");
+}
+.bbb::before {
+  content: "";
+  display: block;
+  width: 270px;
+  height: 120px;
+  background-image: url("./Group2.png");
+}
+.ccc::before {
+  content: "";
+  display: block;
+  width: 270px;
+  height: 120px;
+  background-image: url("./Group3.png");
+}
+.ddd::before {
+  content: "";
+  display: block;
+  width: 270px;
+  height: 120px;
+  background-image: url("./Group4.png");
+}
+.work-ul {
+  display: flex;
+  list-style: none;
+  padding-top: 100px;
+}
+.h2 {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+.work-li {
+  padding-right: 50px;
+}
+.box1 {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  left: 215px;
+  top: 1208px;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.box2 {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  left: 615px;
+  top: 1208px;
+}
+.box3 {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  left: 1015px;
+  top: 1208px;
+}
+.team {
+  text-align: center;
+  padding-bottom: 50px;
+}
+.team-ul {
+  display: flex;
+  list-style: none;
+}
+.team-li {
+  padding-right: 30px;
+}
+.box4 {
+  position: absolute;
+  width: 270px;
+  height: 368px;
+  left: 215px;
+  top: 1782px;
+}
+.box5 {
+  position: absolute;
+  width: 270px;
+  height: 368px;
+  left: 515px;
+  top: 1782px;
+}
+.box6 {
+  position: absolute;
+  width: 270px;
+  height: 368px;
+  left: 815px;
+  top: 1782px;
+}
+.box7 {
+  position: absolute;
+  width: 270px;
+  height: 368px;
+  left: 1115px;
+  top: 1782px;
 }
