--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@
 }
 .button {
   background-color: blue;
-  margin-right: 500px;
+  display: block;
+  margin-right: 1000px;
 }
 .main-ul {
   padding-top: 100px;
@@ -67,7 +68,7 @@
 }
 .h2 {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 90px;
   padding-bottom: 30px;
 }
 .work-li {
@@ -88,6 +89,9 @@
   height: 294px;
   left: 615px;
   top: 1208px;
+  -webkit-box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 .box3 {
   /* position: absolute; */
@@ -95,10 +99,14 @@
   height: 294px;
   left: 1015px;
   top: 1208px;
+  -webkit-box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 .team {
   text-align: center;
   padding-bottom: 50px;
+  padding-top: 90px;
 }
 .team-ul {
   display: flex;
@@ -107,31 +115,11 @@
 .team-li {
   padding-right: 30px;
 }
-.box4 {
-  /* position: absolute; */
-  width: 270px;
-  height: 368px;
-  left: 215px;
-  top: 1782px;
+.pp {
+  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
-.box5 {
-  /* position: absolute; */
-  width: 270px;
-  height: 368px;
-  left: 515px;
-  top: 1782px;
-}
-.box6 {
-  /* position: absolute; */
-  width: 270px;
-  height: 368px;
-  left: 815px;
-  top: 1782px;
-}
-.box7 {
-  /* position: absolute; */
-  width: 270px;
-  height: 368px;
-  left: 1115px;
-  top: 1782px;
+.footer {
+  padding-top: 50px;
 }
